# doc-layout-forge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
src/: app.py  config.py
src/core/: __init__.py  config.py  logging_config.py  tools.py
src/model/: __init__.py  yolo.py
test/: get_coco_annotations.py  test_endpoint_detect.py
test/example/: ppt.json
test/results/: headers.json
